--- a/games/index.html
+++ b/games/index.html
@@ -65,8 +65,8 @@
 			<ul>
 				<li>The Game Awards (2023):
 					<ul class="ul-forza-awards">
-						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">Innovation in Accessibility Award</a></li>
-						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">Best Sports/Racing Award</a></li>
+						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">Innovation in Accessibility</a></li>
+						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">Best Sports/Racing</a></li>
 						
 					</ul>
 				</li>
