IGN Best Accessibility Innovation
Another award!!!!

--- a/games/index.html
+++ b/games/index.html
@@ -67,7 +67,11 @@
 					<ul class="ul-forza-awards">
 						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">Innovation in Accessibility</a></li>
 						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">Best Sports/Racing</a></li>
-						
+					</ul>
+				</li>
+				<li>IGN (2023):
+					<ul class="ul-forza-awards">
+						<li><a class="decorated-links" target="_self" href="https://www.ign.com/articles/accessibility-innovation-games-2023">Best Accessibility Innovation</a></li>
 					</ul>
 				</li>
 				<li>GAConf (2023):
