Updated Favorite Sounding Games
Replaced Dino Run with Galaga. I do love Dino Run but maybe not for the sound. I probably love Galaga for reasons not sound-related, but I do love how it sounds, so there.

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 				<li>Outer Wilds</li>
 				<li>Battlefield (3 and 1943)</li>
 				<li>Railroad Tycoon 3</li>
+				<li>Galaga</li>
 				<li>Mud and Blood 2 (Flash)</li>
-				<li>Dino Run (Flash)</li>
 			</ul>
 		</div>
 	</div>
