--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	</div>
 	<hr class="main_hr">
 <!--Quick Links-->	
-	<div class="content-quicklinks-group-div">
+	<div id="Quick-Links" class="content-quicklinks-group-div">
 		<h2 class="content-quicklinks-group-title">Quick Links</h2>
 		<div class="content-quick-link-div">
 			<div class="content-quick-link-separator">
@@ -105,22 +105,23 @@
 	</div>
 	<hr class="main_hr">
 <!--Bio-->
-	<div class="content-bio-div">
+	<div id="Bio" class="content-bio-div">
 		<div class="content-bio-text">
 			<h2 class="remove-top-margin-text">Howdy!</h2>
-			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half, Leo, and our two dogs. Thanks for visiting!<br><br>I currently work with the fantastic folks at Turn 10 Studios on Forza Motorsport, which has been my first AAA release. Before that, I got my MFA in Sound Design from the Savannah College of Art &#38; Design and my Bachelor's in Visualization at Texas A&#38;M University.<br><br>When I'm not helping make the cars go vroom, I can be found playing video and board games, walking my dogs, watching Formula 1, making music for myself, cooking, or enjoying a beer.</p>
+			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half, Leo, and our two dogs. Thanks for visiting!<br><br>I currently work with the fantastic folks at Turn 10 Studios on Forza Motorsport, which has been my first AAA release. Before that, I got my MFA in Sound Design from the Savannah College of Art &#38; Design and my Bachelor's in Visualization at Texas A&#38;M University.<br><br>When I'm not helping make the cars go vroom, I can be found playing video and board games, learning about history, watching Formula 1 or Hockey, making music for myself, cooking, or enjoying a beer.</p>
 			<h3 class="favorites-headers">Some additional fun facts:</h3>
 			<ul>
-				<li>I start to sound like the people I'm talking to in a matter of minutes.</li>
-				<li>My dogs collectively have 3 working eyes and 2 working ears.</li>
-				<li>Pineapple belongs on pizza. This is not about me, it is a fact.</li>
+				<li>Yes, I do deliberately say Howdy as a greeting.</li>
+				<li>I start to sound like people I'm talking to within minutes.</li>
+				<li>My dogs collectively have 3 eyes and 2 working ears.</li>
+				<li>Pineapple belongs on pizza. This isn't about me, this is a fact.</li>
 			</ul>
 		</div>
 		<div class="content-bio-img">
-			<img id="img-bio" src="images/Me.jpg" alt="A photo of me, from my wedding! I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind large black-framed glasses. I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers and a white french-cuffed shirt rolled up to the elbows, with black suspenders, a black bow tie, and my usual low-swept crisp pompadour haircut. A white carnation clings to one suspender strap."/>
+			<img id="img-bio" src="images/Me.jpg" alt="A photo of me! I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind huge black-framed glasses. I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers, a white french-cuffed shirt rolled up to the elbows, black suspenders, a black bow tie, and my usual crisp pompadour haircut. A white carnation clings to one suspender strap."/>
 		</div>
 	</div>
-	<div class="content-bio-favgames-div">
+	<div id="Fav-Games" class="content-bio-favgames-div">
 		<div class="content-bio-favgames-column-1">
 			<h3 class="favorites-headers">Favorite games lately:</h3>
 			<ul class="ul-favorites-list">
