Forza- IGN Best Racing Game
Added another one to the awards list!

--- a/games/index.html
+++ b/games/index.html
@@ -73,6 +73,9 @@
 					<ul class="ul-forza-awards">
 						<li><a class="decorated-links" target="_self" href="https://www.ign.com/articles/accessibility-innovation-games-2023">Best Accessibility Innovation</a></li>
 					</ul>
+					<ul class="ul-forza-awards">
+						<li><a class="decorated-links" target="_self" href="https://www.ign.com/articles/ign-awards-2023-every-winner-announced">Best Racing Game</a></li>
+					</ul>
 				</li>
 				<li>GAConf (2023):
 					<ul class="ul-forza-awards">
