Added Dice Awards

--- a/games/index.html
+++ b/games/index.html
@@ -75,6 +75,11 @@
 						<li><a class="decorated-links" target="_self" href="https://www.ign.com/articles/ign-awards-2023-every-winner-announced">Best Racing Game</a></li>
 					</ul>
 				</li>
+				<li>27th Annual Dice Awards (2023):
+					<ul class="ul-forza-awards">
+						<li><a class="decorated-links" target="_self" href="https://www.interactive.org/awards/27th_dice_awards_finalists.asp">Racing Game of the Year</a></li>
+					</ul>
+				</li>
 				<li>GAConf (2023):
 					<ul class="ul-forza-awards">
 						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">AAA Excellence (Nomination)</a></li>
