GAConf 2023 Awards Won

--- a/games/index.html
+++ b/games/index.html
@@ -80,12 +80,12 @@
 						<li><a class="decorated-links" target="_self" href="https://www.interactive.org/awards/27th_dice_awards_finalists.asp">Racing Game of the Year</a></li>
 					</ul>
 				</li>
-				<li>GAConf (2023):
+				<li>GAConf Awards (2023):
 					<ul class="ul-forza-awards">
-						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">AAA Excellence (Nomination)</a></li>
+						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">AAA Excellence</a></li>
 						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Best Physical/Mobility Accessibility (Nomination)</a></li>
-						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Best Blind/Low-Vision Accessibility (Nomination)</a></li>
-						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Greatest Accessibility Innovation (Nomination)</a></li>
+						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Best Blind/Low-Vision Accessibility</a></li>
+						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Greatest Accessibility Innovation</a></li>
 					</ul>
 				</li>
 			</ul>
