Slight ReaScript update
I should make more gifs for the other 2-3 scripts in there. Would be way better than what I'm doing now.

--- a/more/index.html
+++ b/more/index.html
@@ -64,8 +64,8 @@
 		<hr class="minor_hr">
 		<div class="project-div">
 			<div class="project-content-left">
-				<h3 class="subproject-title">Region Utility</h3>
-				<p>Making Regions less tedious.<br><br>Currently makes a region for every selected media item, named after and assigned to its track. Further plans include adding a GUI, more options for names and region matrix assignments, and also better naming/numbering.</p>
+				<h3 class="subproject-title">Seperate Regions per Item with Track Name</h3>
+				<p>Making Regions less tedious.<br><br>Makes a region for every selected media item, named after and assigned to its track.</p>
 			</div>
 			<div class="project-content-right">
 				<img class="img-reascript-gif" src="../images/ReaScripts_Regions_Util.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown. The user selects two media items, one on each track, and runs the script, which creates a region for each with the track names." />
