--- a/more/index.html
+++ b/more/index.html
@@ -63,13 +63,11 @@
 				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Snoopy20111-Reascripts">See the Github Repo</a>
 			</div>
 		</div>
-		
-		
 		<div class="div-collapsible">
 			<details class="project-collapsible">
 				<summary>SEPERATE REGIONS PER ITEM WITH TRACK NAME</summary>
 				<div class="project-collapsible-content">
-					<p class="remove-top-margin-text">Makes a region for every selected media item, named after and assigned to its track.</p>
+					<p class="remove-top-margin-text project-collapsible-text">Makes a region for every selected media item, named after and assigned to its track.</p>
 					<img class="img-reascript-gif" src="../images/ReaScripts_Regions_Util.gif" alt="A gif depicting the Seperate Regions Per Item With Track Name script in action. The names of two tracks are shown. The user selects two media items, one on each track, and runs the script, which creates a region for each with the track names." />
 				</div>
 			</details>
@@ -78,7 +76,7 @@
 			<details class="project-collapsible">
 				<summary>SNAP END OF MEDIA ITEMS</summary>
 				<div class="project-collapsible-content">
-					<p class="remove-top-margin-text">Moves selected media items so their ends meet the nearest grid-line.<br><br>Pairs well with scripts that don't cut media items on gridlines. Makes it much easier to edit, make regions over, etc.</p>
+					<p class="remove-top-margin-text project-collapsible-text">Moves selected media items so their ends meet the nearest grid-line.<br><br>Pairs well with scripts that don't cut media items on gridlines. Makes it much easier to edit, make regions over, etc.</p>
 					<img class="img-reascript-gif" src="../images/ReaScripts_SnapToEndOfMediaItems.gif" alt="A gif depicting the Snap To End of Media Items script in action. Two media items are selected with ends near a grid line. The script runs and both items snap to the same grid line." />
 				</div>
 			</details>
@@ -87,7 +85,7 @@
 			<details class="project-collapsible">
 				<summary>ADD PREFIX OR SUFFIX TO REGIONS</summary>
 				<div class="project-collapsible-content">
-					<p class="remove-top-margin-text">For all selected regions, add a string with a seperator to the beginning or end.<br><br>Largely edited from Acendan's region enumeration and Find And Replace in Regions/Markers scripts. Please go look at his scripts and other work, especially with the UCS.</p>
+					<p class="remove-top-margin-text project-collapsible-text">For all selected regions, add a string with a seperator to the beginning or end.<br><br>Largely edited from Acendan's region enumeration and Find And Replace in Regions/Markers scripts. Please go look at his scripts and other work, especially with the UCS.</p>
 					<img class="img-reascript-gif" src="../images/ReaScripts_RegionPrefixSuffix.gif" alt="A gif depicting the Region Prefix/Suffix script in action. Three regions are shown with enumerated names. Different groupings have the words <q>Prefix</q> and <q>Suffix</q> added to their beginnings and ends respectively." />
 				</div>
 			</details>
@@ -96,7 +94,7 @@
 			<details class="project-collapsible">
 				<summary>NAME AND ENUMERATE REGIONS PER MEDIA ITEM</summary>
 				<div class="project-collapsible-content">
-					<p class="remove-top-margin-text">Makes a region for each selected media item, each with the given name and adequate enumeration. Very convenient to make regions for variations of sounds.</p>
+					<p class="remove-top-margin-text project-collapsible-text">Makes a region for each selected media item, each with the given name and adequate enumeration. Very convenient to make regions for variations of sounds.</p>
 					<p>[Image goes here]</p>
 				</div>
 			</details>
@@ -105,13 +103,12 @@
 			<details class="project-collapsible">
 				<summary>MOVE MEDIA ITEMS END TO END</summary>
 				<div class="project-collapsible-content">
-					<p class="remove-top-margin-text">For organizing and grouping a set of media items across different tracks. Allows the user to quickly and efficiently "stairstep" selected media items. Crossfaded items on the same track are treated as one, to keep edits together and unbroken.</p>
+					<p class="remove-top-margin-text project-collapsible-text">For organizing and grouping a set of media items across different tracks. Allows the user to quickly and efficiently "stairstep" selected media items. Crossfaded items on the same track are treated as one, to keep edits together and unbroken.</p>
 					<p>[Image goes here]</p>
 				</div>
 			</details>
 		</div>
 	</div>
-
 <!--Solar Science-->
 	<div id="SolarScience">
 	<hr class="main_hr">
