Fixed ReaScript Github Button
Not a perfect fix, but stopped it from fighting with the image on Desktop scales. Now it's super wide, but that works

--- a/more/index.html
+++ b/more/index.html
@@ -58,9 +58,7 @@
 			</div>
 			<div class="project-content-right">
 				<img id="img-reaper-logo" src="../images/ReaScripts_onPage.jpg" alt="Logo for Reaper, Logan's favorite Digital Audio Workstation."/>
-			</div>
-			<div>
-				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Snoopy20111-Reascripts">See the Github Repo</a>
+				<a id="button-reaper-repo" class="download-button-link" target="_self" href="https://github.com/Snoopy20111/Snoopy20111-Reascripts">See the Github Repo</a>
 			</div>
 		</div>
 		<div class="div-collapsible">
