--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
 	<div id="Bio" class="content-bio-div">
 		<div class="content-bio-text">
 			<h2 class="remove-top-margin-text">Howdy!</h2>
-			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half, Leo, and our two dogs. Thanks for visiting!<br><br>I currently work with the fantastic folks at Turn 10 Studios on Forza Motorsport, which has been my first AAA release. Before that, I got my MFA in Sound Design from the Savannah College of Art &#38; Design and my Bachelor's in Visualization at Texas A&#38;M University.<br><br>When I'm not helping make the cars go vroom, I can be found playing video and board games, learning about history, watching Formula 1 or Hockey, making music for myself, cooking, or enjoying a beer.</p>
+			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half, Leo, and our two dogs. Thanks for visiting!</p>
+			<p>I recently worked with Turn 10 Studios on Forza Motorsport, my first AAA title. Before that, I completed my MFA in Sound Design from the Savannah College of Art &#38; Design and a Bachelor of Science degree in Visualization from Texas A&#38;M University.</p>
+			<p>In my free time, I can be found playing video and board games, learning about history, watching Formula 1 or Hockey, learning to ice skate, making music for myself, cooking, or enjoying a beer (not mutually exclusive).</p>
 			<h3 class="favorites-headers">Some additional fun facts:</h3>
 			<ul>
 				<li>Yes, I do deliberately say Howdy as a greeting.</li>
@@ -118,7 +120,7 @@
 			</ul>
 		</div>
 		<div class="content-bio-img">
-			<img id="img-bio" src="images/Me.jpg" alt="A photo of me! I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind huge black-framed glasses. I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers, a white french-cuffed shirt rolled up to the elbows, black suspenders, a black bow tie, and my usual crisp pompadour haircut. A white carnation clings to one suspender strap."/>
+			<img id="img-bio" src="images/Me.jpg" alt="A photo of me! I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers, a white french-cuffed shirt rolled up to the elbows, black suspenders, a black bow tie, and my usual crisp pompadour haircut. I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind huge black-framed glasses. A white carnation clings to one suspender strap."/>
 		</div>
 	</div>
 	<div id="Fav-Games" class="content-bio-favgames-div">
