Minor Bio update
Slight change of a couple words

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 			<h2 class="remove-top-margin-text">Howdy!</h2>
 			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half, Leo, and our two dogs. Thanks for visiting!</p>
 			<p>I recently worked with Turn 10 Studios on Forza Motorsport, my first AAA title. Before that, I completed my MFA in Sound Design from the Savannah College of Art &#38; Design and a Bachelor of Science degree in Visualization from Texas A&#38;M University.</p>
-			<p>In my free time, I can be found playing video and board games, learning about history, watching Formula 1 or Hockey, learning to ice skate, making music for myself, cooking, or enjoying a beer (not mutually exclusive).</p>
+			<p>In my free time, I can be found playing video and board games, learning about history, watching Formula 1 racing or Minnesota Wild Hockey, learning to ice skate, making music for myself, cooking, or enjoying a beer (not mutually exclusive).</p>
 			<h3 class="favorites-headers">Some additional fun facts:</h3>
 			<ul>
 				<li>Yes, I do deliberately say Howdy as a greeting.</li>
