Added IDs for quick hyperlinking
Easier to point people to specific things this way.

--- a/games/index.html
+++ b/games/index.html
@@ -60,7 +60,7 @@
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube video, Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
-		<div class="project-div-singlecolumn">
+		<div class="project-div-singlecolumn" id="Forza-Awards">
 			<p>Since release, we've been proud to receive the following honors:</p>
 			<ul>
 				<li>The Game Awards (2023):
@@ -91,7 +91,7 @@
 			</ul>
 		</div>
 		<hr class="minor_hr">
-		<div class="project-div">
+		<div class="project-div" id="Forza-Videos">
 		<div class="project-content-left">
 				<h3 class="subproject-title-block">Audio Description</h3>
 				<iframe class="project-video-embed-block" src="https://www.youtube.com/embed/T09tj4i82ok" title="YouTube video, Forza Motorsport Audio Description example" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -168,7 +168,7 @@
 	<hr class="main_hr">
 		<h2 class="project-title">Student Games</h2>
 <!--The House Where They Dwell-->
-		<div class="project-div">
+		<div class="project-div" id="TheHouseWhereTheyDwell">
 			<div class="project-content-left">
 				<h3 class="subproject-title">The House Where They Dwell</h3>
 				<h4 class="project-subtitle-text">Half-Brain Games | Audio Director</h4>
@@ -183,7 +183,7 @@
 		</div>
 		<hr class="minor_hr">
 <!--Sumra-->
-		<div class="project-div">
+		<div class="project-div" id="Sumra">
 			<div class="project-content-left">
 				<h3 class="subproject-title">Sumra</h3>
 				<h4 class="project-subtitle-text">DASE Games | Sound Designer</h4>
@@ -197,7 +197,7 @@
 		</div>
 		<hr class="minor_hr">
 <!--FooFarYall-->
-		<div class="project-div">
+		<div class="project-div" id="FooFarYall">
 			<div class="project-content-left">
 				<h3 class="subproject-title">FooFarYall</h3>
 				<h4 class="project-subtitle-text">The Good, The Bad, &#38; The Howdy | Audio Person</h4>
