Updated Favorite Recent Games list
Removed some that aren't relevant anymore and added a couple that are, lately. Hope to add at least another one soon, I just need to chill out and play more games.

--- a/index.html
+++ b/index.html
@@ -128,11 +128,10 @@
 			<h3 class="favorites-headers">Favorite games lately:</h3>
 			<ul class="ul-favorites-list">
 				<li>Forza Motorsport</li>
+				<li>Lethal Company</li>
 				<li>Morrowind</li>
-				<li>Dredge</li>
 				<li>Art of Rally</li>
-				<li>Tsuro of the Seas</li>
-				<li>Toy Soldiers</li>
+				<li>Mysterium</li>
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-2">
