--- a/games/index.html
+++ b/games/index.html
@@ -46,7 +46,7 @@
 	</div>
 <!--Main content-->
 <div class="content-main">
-<!--Forza!-->
+<!--Forza-->
 	<div id="Forza">
 	<hr class="main_hr">
 		<h2 class="project-title">Forza Motorsport</h2>
@@ -160,6 +160,24 @@
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Youtube video, Trailer for Variant: Limits" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>It was my first taste of professional game development, and allowed me to cut my teeth for a good cause as I distanced myself from Game Art. While no games I worked on saw release with sounds or music I produced, their influence remained and helped identify the tone and emotional shape of the projects, including Variant: Limits and Artè: Lumière.</p>
+			</div>
+		</div>
+	</div>
+<!--ObjectsInMirror-->
+	<div id="ObjectsInMirror">
+	<hr class="main_hr">
+		<h2 class="project-title">Objects In Mirror</h2>
+		<div class="project-div">
+			<h3 class="project-subtitle-text">Personal Project | Solo Developer</h3>
+			<div class="project-content-left">
+				<p class="remove-top-margin-text">...may be closer than they appear.<br><br>A top-down horror driving game about escaping the dark country roads and the things that live in them. It formed my entry to the Acerola Jam Zero game jam, which stipulated teams of one, a length of two weeks, and open-source when possible. I took the opportunity to use Godot 4 and Wwise, and have slowly continued development since.</p>
+				<p><br><br>[Image or video should go here]<br><br></p>
+			</div>
+			<div class="project-content-right">
+				<p><br><br>[Image or video should go here]<br><br></p>
+				<p>This was the first game jam I'd been part of in many years, and it was both fun to work with Godot + Wwise and freeing to focus on a small scope and just creating <i>something</i> in a short time span. Like this part of the website, the game is unfinished and in-progress, so play at your own risk.</p>
+				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/FPSSample">See the GitHub Project</a>
+				<a class="download-button-link" target="_self" href="https://snoopy20111.itch.io/objects-in-mirror">Download on Itch.io</a>
 			</div>
 		</div>
 	</div>
