Added some ReaScript example gifs
Added gifs for MoveItemsEndToEnd and NameAndEnumerateRegionsPerMediaItem.

--- a/more/index.html
+++ b/more/index.html
@@ -66,7 +66,7 @@
 				<summary>SEPERATE REGIONS PER ITEM WITH TRACK NAME</summary>
 				<div class="project-collapsible-content">
 					<p class="remove-top-margin-text project-collapsible-text">Makes a region for every selected media item, named after and assigned to its track.</p>
-					<img class="img-reascript-gif" src="../images/ReaScripts_Regions_Util.gif" alt="A gif depicting the Seperate Regions Per Item With Track Name script in action. The names of two tracks are shown. The user selects two media items, one on each track, and runs the script, which creates a region for each with the track names." />
+					<img class="img-reascript-gif" src="../images/ReaScripts_SeparateRegionsPerItem.gif" alt="A gif depicting the Seperate Regions Per Item With Track Name script in action. The names of two tracks are shown. The user selects two media items, one on each track, and runs the script, which creates a region for each with the track names." />
 				</div>
 			</details>
 		</div>
@@ -93,7 +93,7 @@
 				<summary>NAME AND ENUMERATE REGIONS PER MEDIA ITEM</summary>
 				<div class="project-collapsible-content">
 					<p class="remove-top-margin-text project-collapsible-text">Makes a region for each selected media item, each with the given name and adequate enumeration. Very convenient to make regions for variations of sounds.</p>
-					<p>[Image goes here]</p>
+					<img class="img-reascript-gif" src="../images/ReaScripts_NameAndEnumerateRegions.gif" alt="A gif depicting the Name And Enumerate Regions Per Media Item script in action. Multiple media items are selected before a window pops up with options to give the preferred region name, separating character, and minimum digit padding. The user presses <q>ok</q> and regions matching those settings spring into being." />
 				</div>
 			</details>
 		</div>
@@ -102,7 +102,7 @@
 				<summary>MOVE MEDIA ITEMS END TO END</summary>
 				<div class="project-collapsible-content">
 					<p class="remove-top-margin-text project-collapsible-text">For organizing and grouping a set of media items across different tracks. Allows the user to quickly and efficiently "stairstep" selected media items. Crossfaded items on the same track are treated as one, to keep edits together and unbroken.</p>
-					<p>[Image goes here]</p>
+					<img class="img-reascript-gif" src="../images/ReaScripts_MoveItemsEndToEnd.gif" alt="A gif depicting the Move Items End To End script in action. Multiple media items are selected before a window pops up with spacing options. The user presses <q>ok</q> and the media items shuffle into place." />
 				</div>
 			</details>
 		</div>
