Updated LinkedIn URL
Changed the URL on LinkedIn's side, and even though the old one still worked when I tried it, I'm sure that won't last forever, so I'm just updating it. Much cleaner URL anyway.

--- a/more/index.html
+++ b/more/index.html
@@ -32,7 +32,7 @@
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
 				<img id="img-twitter-header" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter profile." />
 			</a>
-			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
+			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/lhardin-sound/">
 				<img id="img-linkedin-header" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
@@ -192,7 +192,7 @@
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
 				<img id="img-twitter-footer" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter profile." />
 			</a>
-			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
+			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/lhardin-sound/">
 				<img id="img-linkedin-footer" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
