--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 		<div class="content-bio-text">
 			<h2 class="remove-top-margin-text">Howdy!</h2>
 			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half, Leo, and our two dogs. Thanks for visiting!</p>
-			<p>I recently worked with Turn 10 Studios on Forza Motorsport, my first AAA title. Before that, I completed my MFA in Sound Design from the Savannah College of Art &#38; Design and a Bachelor of Science degree in Visualization from Texas A&#38;M University.</p>
+			<p>As a Technical Sound Designer, I like to think I can learn quickly and speak other teams' languages so we can build great things together. I got a Bachelor of Science in Visualization from Texas A&#38;M University, where I mingled with animators, game designers, programmers, and performance artists, forging my own Sound Design path.</p>
+			<p>I went on to complete my MFA in Sound Design at the Savannah College of Art &#38; Design, go from Intern to Team Member with Turn 10 Studios, and ship Forza Motorsport (2023), my first AAA title. Most recently I've joined Meta's Creative Audio Team, where I continue to cross-pollinate and find solutions of all kinds to problems of all shapes and sizes.</p>
 			<p>In my free time, I can be found playing video and board games, learning about history, watching Formula 1 racing or Minnesota Wild Hockey, learning to ice skate, making music for myself, cooking, or enjoying a beer (not mutually exclusive).</p>
 			<h3 class="favorites-headers">Some additional fun facts:</h3>
 			<ul>
@@ -129,7 +130,8 @@
 			<ul class="ul-favorites-list">
 				<li>Forza Motorsport</li>
 				<li>Lethal Company</li>
-				<li>Morrowind</li>
+				<li>TES III: Morrowind</li>
+				<li>Duck Game</li>
 				<li>Art of Rally</li>
 				<li>Mysterium</li>
 			</ul>
@@ -137,11 +139,14 @@
 		<div class="content-bio-favgames-column-2">
 			<h3 class="favorites-headers">Anticipated games:</h3>
 			<ul class="ul-favorites-list">
-				<li>Dwarf Fortress (Adventure Mode)</li>
+				<li>Gears of War: E-Day</li>
+				<li>South of Midnight</li>
+				<li>Golden Lap</li>
+				<li>Civilization VII</li>
 				<li>Marathon</li>
-				<li>Haunted Chocolatier</li>
+				<li>Dwarf Fortress (Adventure Mode)</li>
 			</ul>
-			<p class="small-text">I don't anticipate many games because I'm behind the curve as it is. So many good ones already out, so many I just don't know about yet!</p>
+			<!--<p class="small-text">I don't anticipate many games because I'm behind the curve as it is. So many good ones already out, so many I just don't know about yet!</p> -->
 		</div>
 		<div class="content-bio-favgames-column-3">
 			<h3 class="favorites-headers">Favorite sounding games:</h3>
