Bio & Games update
Better-written biography and updated favorite games lists.

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 		<div class="content-bio-text">
 			<h2 class="remove-top-margin-text">Howdy!</h2>
 			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half, Leo, and our two dogs. Thanks for visiting!</p>
-			<p>As a Technical Sound Designer, I like to think I can learn quickly and speak other teams' languages so we can build great things together. I got a Bachelor of Science in Visualization from Texas A&#38;M University, where I mingled with animators, game designers, programmers, and performance artists, forging my own Sound Design path.</p>
-			<p>I went on to complete my MFA in Sound Design at the Savannah College of Art &#38; Design, go from Intern to Team Member with Turn 10 Studios, and ship Forza Motorsport (2023), my first AAA title. Most recently I've joined Meta's Creative Audio Team, where I continue to cross-pollinate and find solutions of all kinds to problems of all shapes and sizes.</p>
-			<p>In my free time, I can be found playing video and board games, learning about history, watching Formula 1 racing or Minnesota Wild Hockey, learning to ice skate, making music for myself, cooking, or enjoying a beer (not mutually exclusive).</p>
+			<p>As a child, my mother (a recreational therapist) taught me the joy of making, and of play. As I got older, I became enamored with video games, and in high school I picked up a guitar and was introduced to Unity 3D. I completed a Bachelor of Science degree in Visualization from Texas A&#38;M University, where I mingled with animators, game designers, programmers, and performance artists, eventually forging my own Sound Design path.</p>
+			<p>I went on to complete my MFA in Sound Design at the Savannah College of Art &#38; Design, go from Intern to Team Member with Turn 10 Studios, and ship Forza Motorsport (2023), my first AAA title. Most recently I've joined Meta's Creative Audio Team, where I continue to cross-pollinate, find solutions, and find the joy in making play.</p>
+			<p>In my free time, I can be found playing video and board games, learning about history, watching Formula 1 racing or Minnesota Wild Hockey, making music for myself, cooking, or enjoying a beer (not mutually exclusive).</p>
 			<h3 class="favorites-headers">Some additional fun facts:</h3>
 			<ul>
 				<li>Yes, I do deliberately say Howdy as a greeting.</li>
@@ -128,11 +128,11 @@
 		<div class="content-bio-favgames-column-1">
 			<h3 class="favorites-headers">Favorite games lately:</h3>
 			<ul class="ul-favorites-list">
-				<li>Forza Motorsport</li>
 				<li>Lethal Company</li>
 				<li>TES III: Morrowind</li>
+				<li>Balatro</li>
+				<li>Forza Motorsport</li>
 				<li>Duck Game</li>
-				<li>Art of Rally</li>
 				<li>Mysterium</li>
 			</ul>
 		</div>
@@ -144,7 +144,6 @@
 				<li>Golden Lap</li>
 				<li>Civilization VII</li>
 				<li>Marathon</li>
-				<li>Dwarf Fortress (Adventure Mode)</li>
 			</ul>
 			<!--<p class="small-text">I don't anticipate many games because I'm behind the curve as it is. So many good ones already out, so many I just don't know about yet!</p> -->
 		</div>
@@ -156,7 +155,7 @@
 				<li>Battlefield (3 and 1943)</li>
 				<li>Railroad Tycoon 3</li>
 				<li>Galaga</li>
-				<li>Mud and Blood 2 (Flash)</li>
+				<li>Mud and Blood 2</li>
 			</ul>
 		</div>
 	</div>
