Objects In Mirror improvements
+ Fixed the link to the Github page for Objects In Mirror
+ Added an image, removed placeholder text
+ Improved the write-up a little bit

--- a/games/index.html
+++ b/games/index.html
@@ -154,13 +154,12 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Personal Project | Solo Developer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">...may be closer than they appear.<br><br>A top-down horror driving game about escaping the dark country roads and the things that live in them. It formed my entry to the Acerola Jam Zero game jam, which stipulated teams of one, a length of two weeks, and open-source when possible. I took the opportunity to use Godot 4 and Wwise, and have slowly continued development since.</p>
-				<p><br><br>[Image or video should go here]<br><br></p>
+				<p class="remove-top-margin-text">...may be closer than they appear.<br><br>A top-down horror rally-driving game about escaping the dark country roads and the things that live in them. It formed my entry to the <a class="decorated-links" target="_self" href="https://itch.io/jam/acerola-jam-0">Acerola Jam Zero game jam.</a> I took the opportunity to use Godot 4 and Wwise, using and contributing to Alessandro Famà's <a class="decorated-links" target="_self" href="https://github.com/alessandrofama/wwise-godot-integration">Wwise integration.</a></p>
+				<p>It was both fun to work with Godot and freeing to focus on a small scope. The game is unfinished, so play at your own risk!</p>
 			</div>
 			<div class="project-content-right">
-				<p><br><br>[Image or video should go here]<br><br></p>
-				<p>This was the first game jam I'd been part of in many years, and it was both fun to work with Godot + Wwise and freeing to focus on a small scope and just creating <i>something</i> in a short time span. Like this part of the website, the game is unfinished and in-progress, so play at your own risk.</p>
-				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/FPSSample">See the GitHub Project</a>
+				<img id="img-obj-in-mirror" src="../images/ObjectsInMirror.jpg" alt="Screenshot from the game. An orange pickup truck's headlights scatter light across a paved two-lane road through the rain and darkness." />
+				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/ObjectsInMirror">See the GitHub Project</a>
 				<a class="download-button-link" target="_self" href="https://snoopy20111.itch.io/objects-in-mirror">Download on Itch.io</a>
 			</div>
 		</div>
