Forza Awards wrapped list
Improved display of the awards section by wrapping the list on Desktop.

--- a/games/index.html
+++ b/games/index.html
@@ -61,35 +61,35 @@
 			</div>
 		</div>
 		<div class="project-div-singlecolumn" id="Forza-Awards">
-			<p>Since release, we've been proud to receive the following honors:</p>
-			<ul>
-				<li>The Game Awards (2023):
-					<ul class="ul-forza-awards">
-						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">Innovation in Accessibility</a></li>
-						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">Best Sports/Racing</a></li>
-					</ul>
-				</li>
-				<li>IGN (2023):
-					<ul class="ul-forza-awards">
-						<li><a class="decorated-links" target="_self" href="https://www.ign.com/articles/accessibility-innovation-games-2023">Best Accessibility Innovation</a></li>
-						<li><a class="decorated-links" target="_self" href="https://www.ign.com/articles/ign-awards-2023-every-winner-announced">Best Racing Game</a></li>
-					</ul>
-				</li>
-				<li>27th Annual Dice Awards (2023):
-					<ul class="ul-forza-awards">
-						<li><a class="decorated-links" target="_self" href="https://www.interactive.org/awards/27th_dice_awards_finalists.asp">Racing Game of the Year</a></li>
-					</ul>
-				</li>
-				<li>GAConf Awards (2023):
-					<ul class="ul-forza-awards">
-						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">AAA Excellence</a></li>
-						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Best Physical/Mobility Accessibility (Nomination)</a></li>
-						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Best Blind/Low-Vision Accessibility</a></li>
-						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Greatest Accessibility Innovation</a></li>
-					</ul>
-				</li>
-			</ul>
+			<p class="remove-top-margin-text">Since release, we've been proud to receive the following honors:</p>
 		</div>
+		<ul class="project-div" id="Forza-Awards-List">
+			<li class="li-forza-awards">The Game Awards (2023):
+				<ul class="ul-forza-awards">
+					<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">Innovation in Accessibility</a></li>
+					<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">Best Sports/Racing</a></li>
+				</ul>
+			</li>
+			<li class="li-forza-awards">IGN (2023):
+				<ul class="ul-forza-awards">
+					<li><a class="decorated-links" target="_self" href="https://www.ign.com/articles/accessibility-innovation-games-2023">Best Accessibility Innovation</a></li>
+					<li><a class="decorated-links" target="_self" href="https://www.ign.com/articles/ign-awards-2023-every-winner-announced">Best Racing Game</a></li>
+				</ul>
+			</li>
+			<li class="li-forza-awards">27th Annual Dice Awards (2023):
+				<ul class="ul-forza-awards">
+					<li><a class="decorated-links" target="_self" href="https://www.interactive.org/awards/27th_dice_awards_finalists.asp">Racing Game of the Year</a></li>
+				</ul>
+			</li>
+			<li class="li-forza-awards">GAConf Awards (2023):
+				<ul class="ul-forza-awards">
+					<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">AAA Excellence</a></li>
+					<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Best Physical/Mobility Accessibility (Nomination)</a></li>
+					<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Best Blind/Low-Vision Accessibility</a></li>
+					<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Greatest Accessibility Innovation</a></li>
+				</ul>
+			</li>
+		</ul>
 		<hr class="minor_hr">
 		<div class="project-div" id="Forza-Videos">
 		<div class="project-content-left">
