--- a/games/index.html
+++ b/games/index.html
@@ -53,11 +53,11 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Turn 10 Studios | Sound Designer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team as a Summer Apprentice in 2021 and as a Sound Designer that Autumn. I was thrilled to help bring Forza Motorsport across the finish line!</p>
-				<p>I worked with a bit of everything on the project except car engines, with practically every tool in Turn 10's chest, including FMOD Studio, 3DS Max, Perforce, and a plethora of in-house tools.</p>
+				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team in 2021, shipping Forza Motorsport 2023 as my first AAA title. I had a hand in almost everything except car engines (examples below).</p>
+				<p class="inline-grid">In so doing, I became familiar with practically every tool in Turn 10's chest, including FMOD Studio, 3DS Max, Perforce, and a plethora of in-house tools.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube video, Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube video, Forza Motorsport 2023 Trailer, without Audio Description. A Described version of this trailer is available on YouTube." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 		<div class="project-div-singlecolumn" id="Forza-Awards">
@@ -110,6 +110,23 @@
 			</div>
 		</div>
 	</div>
+<!--ObjectsInMirror-->
+	<div id="ObjectsInMirror">
+	<hr class="main_hr">
+		<h2 class="project-title">Objects In Mirror</h2>
+		<div class="project-div">
+			<h3 class="project-subtitle-text">Personal Project | Solo Developer</h3>
+			<div class="project-content-left">
+				<p class="remove-top-margin-text">...may be closer than they appear.<br><br>A top-down horror rally-driving game about escaping the dark country roads and the things that live in them. It formed my entry to the <a class="decorated-links" target="_self" href="https://itch.io/jam/acerola-jam-0">Acerola Jam Zero game jam.</a> I took the opportunity to use Godot 4 and Wwise, using and contributing to Alessandro Famà's <a class="decorated-links" target="_self" href="https://github.com/alessandrofama/wwise-godot-integration">Wwise integration.</a></p>
+				<p>It was both fun to work with Godot and freeing to focus on a small scope.</p>
+			</div>
+			<div class="project-content-right">
+				<img id="img-obj-in-mirror" src="../images/ObjectsInMirror.jpg" alt="Screenshot from the game. An orange pickup truck's headlights scatter light across a paved two-lane road through the rain and darkness." />
+				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/ObjectsInMirror">See the GitHub Project</a>
+				<a class="download-button-link" target="_self" href="https://snoopy20111.itch.io/objects-in-mirror">Download on Itch.io</a>
+			</div>
+		</div>
+	</div>
 <!--Thesis-->
 	<div id="Thesis">
 	<hr class="main_hr">
@@ -117,12 +134,12 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Savannah College of Art &#38; Design | MFA in Sound Design</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games.<br><br>For my thesis, I practiced and wrote about my discipline: the job of the Technical Sound Designer. To do so I expanded on Unity's 2018 FPS Sample project, re-implementing the audio via FMOD Studio and expanding further on certain systems using C#.<br><br></p>
+				<p class="remove-top-margin-text">Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games.<br><br>For my thesis, I practiced and wrote about the process of Technical Sound Designers. To do so I expanded on Unity's 2018 FPS Sample project, re-implementing the audio via FMOD Studio and augmenting certain systems using C#.<br><br></p>
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/4WZWqboFIuA" title="YouTube video, demonstration of Logan's thesis on technical sound design. This video is not accessible, relying on baked-in captions." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-slideshow-embed" src="https://docs.google.com/presentation/d/e/2PACX-1vQILrF1h5PX8bnlpLd31Tak1mKvQmsWZQmC_PLxb9i-gn-VCxcAwd5QL9aVWdI7G7I7GHnoD0pkeJKO/embed?start=false&loop=true&delayms=30000" title="Google Slides presentation, walking through Logan's Thesis project" frameborder="1" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-				<p>Technically, it was a challenge, as it was built with a home-grown ECS implementation before DOTS. In terms of art and theory though, it helped give structure to the approach I use professionally today.</p>
+				<p>It was a challenge, as the FPS Sample was built with a home-grown ECS implementation before <a class="decorated-links" target="_self" href="https://unity.com/dots">DOTS.</a> In terms of art and theory though, it strongly shaped the approach I use professionally today.</p>
 				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/FPSSample">See the GitHub Project</a>
 				<a class="download-button-link" target="_self" href="https://library.scad.edu/record=b1937300">Read the paper</a>
 			</div>
@@ -147,23 +164,6 @@
 			</div>
 		</div>
 	</div>
-<!--ObjectsInMirror-->
-	<div id="ObjectsInMirror">
-	<hr class="main_hr">
-		<h2 class="project-title">Objects In Mirror</h2>
-		<div class="project-div">
-			<h3 class="project-subtitle-text">Personal Project | Solo Developer</h3>
-			<div class="project-content-left">
-				<p class="remove-top-margin-text">...may be closer than they appear.<br><br>A top-down horror rally-driving game about escaping the dark country roads and the things that live in them. It formed my entry to the <a class="decorated-links" target="_self" href="https://itch.io/jam/acerola-jam-0">Acerola Jam Zero game jam.</a> I took the opportunity to use Godot 4 and Wwise, using and contributing to Alessandro Famà's <a class="decorated-links" target="_self" href="https://github.com/alessandrofama/wwise-godot-integration">Wwise integration.</a></p>
-				<p>It was both fun to work with Godot and freeing to focus on a small scope. The game is unfinished, so play at your own risk!</p>
-			</div>
-			<div class="project-content-right">
-				<img id="img-obj-in-mirror" src="../images/ObjectsInMirror.jpg" alt="Screenshot from the game. An orange pickup truck's headlights scatter light across a paved two-lane road through the rain and darkness." />
-				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/ObjectsInMirror">See the GitHub Project</a>
-				<a class="download-button-link" target="_self" href="https://snoopy20111.itch.io/objects-in-mirror">Download on Itch.io</a>
-			</div>
-		</div>
-	</div>
 <!--Triseum & Live Lab projects-->
 	<div id="TriseumLiveLab">
 	<hr class="main_hr">
@@ -171,12 +171,12 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Texas A&#38;M University | Sound Designer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Games for education and research.<br><br>During my undergrad, I worked with the <a class="decorated-links" href="https://pvfa.tamu.edu/research/live-lab/">Learning Interactive Visualization Experience (LIVE) Lab,</a> an educational research lab focused on game-based learning. I additionally was contracted to do music composition work for <a class="decorated-links" href="https://triseum.com/">Triseum LTD,</a> a close developer partner of the LIVE Lab in Bryan, TX, known for their higher-level education game series.</p>
+				<p class="remove-top-margin-text">Games for education and research.<br><br>During my undergrad, I worked with the <a class="decorated-links" href="https://pvfa.tamu.edu/research/live-lab/">Learning Interactive Visualization Experience (LIVE) Lab,</a> an educational research lab focused on game-based learning. I additionally was contracted to do pre-production music composition work for <a class="decorated-links" href="https://triseum.com/">Triseum LTD,</a> a close developer partner of the LIVE Lab in Bryan, TX, known for their higher-level education game series.</p>
 			</div>
 			<img class="project-content-right" id="img-arte-lumiere" src="../images/ARTe-Lumiere.jpg" alt="Screenshot from Arte Lumiere, another Triseum title" />
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Youtube video, Trailer for Variant: Limits" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>It was my first taste of professional game development, and allowed me to cut my teeth for a good cause as I distanced myself from Game Art. While no games I worked on saw release with sounds or music I produced, their influence remained and helped identify the tone and emotional shape of the projects, including Variant: Limits and Artè: Lumière.</p>
+				<p>It was my first taste of professional game development, and allowed me to cut my teeth for a good cause as I distanced myself from Game Art. Some of the games that came out of these crucibles included Variant: Limits and Artè: Lumière.</p>
 			</div>
 		</div>
 	</div>
@@ -193,7 +193,7 @@
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video, trailer for The House Where They Dwell" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content. It's jank and buggy (pun not intended) and could have done with a few more months in the oven, but the vibes are immaculate.</p>
+				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content, or even cursing.</p>
 				<a class="download-button-link" target="_self" href="https://store.steampowered.com/app/1759460/The_House_Where_They_Dwell/">Download on Steam</a>
 				<a class="download-button-link" target="_self" href="https://halfbraingames.itch.io/the-house-where-they-dwell">Download on Itch.io</a>
 			</div>
@@ -204,7 +204,7 @@
 			<div class="project-content-left">
 				<h3 class="subproject-title">Sumra</h3>
 				<h4 class="project-subtitle-text">DASE Games | Sound Designer</h4>
-				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game that my good friend Brittany Johnson and I were "outsourced" for. It was developed completely in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Perforce. My primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics. For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards.</p>
+				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game, developed completely in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Perforce. As one of two sound designers, primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics. For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ea9yLA2ndrI" title="YouTube video, trailer for Sumra" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -218,13 +218,13 @@
 			<div class="project-content-left">
 				<h3 class="subproject-title">FooFarYall</h3>
 				<h4 class="project-subtitle-text">The Good, The Bad, &#38; The Howdy | Audio Person</h4>
-				<p>Crying over spilled milk.<br><br>A silly Western game, made for <a class="decorated-links" href="https://chillennium.com/">Chillennium Game Jam</a> with Unity and played on one keyboard. All music was recorded &#38; edited on-site. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum &#38; the LIVE Lab.</a></p>
+				<p>Crying over spilled milk.<br><br>A silly Western game, made for <a class="decorated-links" href="https://chillennium.com/">Chillennium Game Jam</a> with Unity and played on one keyboard. All music was recorded &#38; edited on-site. For our efforts we won the award for Special Recognition in Sound.</p>
 				<iframe title="Bandcamp audio player, Walking Gait from FooFarYall original Soundtrack" style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 				<iframe title="Bandcamp audio player, Hot on the Trail from FooFarYall original Soundtrack" style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video, FooFarYall gameplay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the game with a friend if you like. As the product of 48 hours, it's not super deep, and my skills have only gone up from here, but it was a <i>lot</i> of fun to make.</p>
+				<p>This project directly led me to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum &#38; the LIVE Lab,</a> and to me pursuing Game Audio as a career. You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the game with a friend below.</p>
 				<a class="download-button-link" target="_self" href="https://embyrs.itch.io/foofaryall">Download on Itch.io</a>
 			</div>
 		</div>
