--- a/more/index.html
+++ b/more/index.html
@@ -125,14 +125,12 @@
 	<h2 class="project-title">Solar Science</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Kerbal Space Program Mod.<br>Praise the Sun!<br><br>This was a project I originally undertook during my senior year of high school as a directed study. I modeled, textured, animated, and scripted two new experiment parts, based upon those aboard NASA's real <a class="decorated-links" target="_self" href="https://soho.nascom.nasa.gov/">SOHO</a> and <a class="decorated-links" target="_self" href="https://stereo.gsfc.nasa.gov/">STEREO</a> missions. Over the years I made small additions, such as experiment requirements, custom sound effects, and loading real-time images from NASA's feeds when the experiment is run. As KSP is made in Unity, I used it and C# extensively.</p>
+				<p class="remove-top-margin-text">A Kerbal Space Program Mod. Praise the Sun!<br><br>This was a project I originally undertook as a high-school directed study. I modeled, textured, animated, and wrote Unity C# scripts for two new experiment parts, based upon those aboard NASA's real <a class="decorated-links" target="_self" href="https://soho.nascom.nasa.gov/">SOHO</a> and <a class="decorated-links" target="_self" href="https://stereo.gsfc.nasa.gov/">STEREO</a> missions. Over the years I made small additions, such as experiment requirements, SFX, and real-time images from NASA's feeds.</p>
+				<p>Over my 5 years of ownership, Solar Science garnered around 50k downloads across all platforms. In early 2020 I handed the project off to KSP Forums user zer0Kerbal, who has maintained the mod since.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/3WlT3HZsg2U" title="YouTube video, review for Solar Science mod" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-			</div>
-			<div class="project-content-left">
-				<p>Over the 5 years I maintained and expanded the mod, Solar Science managed somewhere around almost 50k downloads across all platforms. In early 2020 I handed the project off to KSP Forums user zer0Kerbal, who has maintained the mod since.</p>
-				<a class="download-button-link" target="_self" href="https://spacedock.info/mod/811/Solar%20Science">Download the mod</a>
+				<a class="download-button-link download-button-spacer" target="_self" href="https://spacedock.info/mod/811/Solar%20Science">Download the mod</a>
 			</div>
 		</div>
 	</div>
