Links: Tumblr -> Github
I barely even use Tumblr, so in an effort to support my Technical persona, I'm replacing it with a Github profile link. Not deleting the old icon file though, since it's a mere 1.2 kB.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
 				<img id="img-bandcamp-header" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's Bandcamp." />
 			</a>
-			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-header" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr blog. This account is significantly less professional." />
+			<a class="undecorated-links" target="_self" href="https://github.com/Snoopy20111">
+				<img id="img-github-header" src="images/icon_github.svg" alt="Github logo and link to Logan's Github profile." />
 			</a>
 		</div>
 		</div>
@@ -160,7 +160,6 @@
 		</div>
 	</div>
 </div>
-
 <!--Footer, similar links as header-->
 	<footer class="footer-main">
 		<div class="footer-links">
@@ -173,8 +172,8 @@
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
 				<img id="img-bandcamp-footer" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's Bandcamp." />
 			</a>
-			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-footer" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr blog. This account is significantly less professional." />
+			<a class="undecorated-links" target="_self" href="https://github.com/Snoopy20111">
+				<img id="img-github-footer" src="images/icon_github.svg" alt="Github logo and link to Logan's Github profile." />
 			</a>
 		</div>
 		<p>©2023 by Logan Hardin</p>
