--- a/more/index.html
+++ b/more/index.html
@@ -38,8 +38,8 @@
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
 				<img id="img-bandcamp-header" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp." />
 			</a>
-			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-header" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account, which is significantly less professional." />
+			<a class="undecorated-links" target="_self" href="https://github.com/Snoopy20111">
+				<img id="img-github-header" src="../images/icon_github.svg" alt="Github logo and link to Logan's Github profile."/>
 			</a>
 		</div>
 		</div>
@@ -208,8 +208,8 @@
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
 				<img id="img-bandcamp-footer" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's Bandcamp." />
 			</a>
-			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-footer" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr blog. This account is significantly less professional." />
+			<a class="undecorated-links" target="_self" href="https://github.com/Snoopy20111">
+				<img id="img-github-footer" src="../images/icon_github.svg" alt="Github logo and link to Logan's Github profile."/>
 			</a>
 		</div>
 		<p>©2023 by Logan Hardin</p>
