Added Meta Horizon Worlds
Added a section for my current work on the Meta Creative Audio team, as well as replacing the Triseum & Live Lab Quick Link on the home page.

--- a/games/index.html
+++ b/games/index.html
@@ -46,6 +46,22 @@
 	</div>
 <!--Main content-->
 <div class="content-main">
+<!--Meta Horizon Worlds-->
+	<div id="HorizonWorlds">
+	<hr class="main_hr">
+		<h2 class="project-title">Meta Horizon Worlds</h2>
+		<div class="project-div">
+			<h3 class="project-subtitle-text">Magnit | Technical Sound Designer</h3>
+			<div class="project-content-left">
+				<p class="remove-top-margin-text">Work Hard, Play Hard.<br><br>I joined the Meta Creative Audio team in 2024 to help prototype, write scripts, improve tools, and empower my fellow sound designers working on Horizon. Much of my work involves writing in TypeScript and C#, as well as using Unity, Facebook Audio360, and a handful of less public in-house tools.</p>
+				<p>Excited to share more later!</p>
+			</div>
+			<div class="project-content-right">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Sd7du11ZPZo" title="Youtube video, Meta Horizon Worlds Horizon Season trailer." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<a class="download-button-link" target="_self" href="https://horizon.meta.com/">Play now on the Quest store, browser, or mobile</a>
+			</div>
+		</div>
+	</div>
 <!--Forza-->
 	<div id="Forza">
 	<hr class="main_hr">
