--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
 		<h2 class="content-quicklinks-group-title">Quick Links</h2>
 		<div class="content-quick-link-div">
 			<div class="content-quick-link-separator">
+				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#HorizonWorlds">
+				<div class="content-quick-link-box">
+					<img id="img-quicklink-prev" src="images/HorizonWorlds-Preview.jpg" alt="A preview image for Meta Horizon Worlds, bearing the Meta logo and promotional art for the platform. Various grinning human characters play and socialize in a green area of a futuristic city." />
+					<p class="quick-link-text">Meta</p>
+				</div>
+				</a>
+			</div>
+			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Forza-Preview.jpg" alt="A preview image for Forza Motorsport, bearing the name, logo, and cover art of the game. The cover art depicts two cars (a yellow Cadillac V-Series.R hypercar and a blue Chevrolet Corvette E-Ray) speeding towards the camera and to the right along a track with red and white curbing and an open blue sky behind." />
@@ -82,14 +90,6 @@
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Roboxing-Preview.jpg" alt="A preview image for Roboxing, showing one of the titular robot boxer characters. They float beneath a light in a dimly lit gym, their red and white triangular body giving the appearance of a wrestling singlet. Their red boxing gloves float in front in the ready position, and their lumpy round head floats above the body with two oval eyes neutrally blinking back at the viewer." />
 					<p class="quick-link-text">Roboxing</p>
-				</div>
-				</a>
-			</div>
-			<div class="content-quick-link-separator">
-				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
-				<div class="content-quick-link-box">
-					<img id="img-quicklink-prev" src="images/Triseum-Preview.jpg" alt="A preview image for Triseum & Live Lab, bearing the Triseum logo. It sits on a circular grid remeniscent of the unit circle, and both of those lay over a blue image of space, as though in a nebula." />
-					<p class="quick-link-text">Triseum &#38; LIVE Lab</p>
 				</div>
 				</a>
 			</div>
